infra/services/observability/seq/seq-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: seq
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`logs.mydomain.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: seq
          port: 5341
  tls:
    certResolver: le
